# paperpilot

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: tests.yml
migrations/: env.py
migrations/versions/: 47dbe84a8b71_create_initial_document_schema.py  b8087e256e46_add_ocr_results.py
src/paperpilot/: __init__.py  database.py  document_repository.py  document_service.py  document_storage.py  document_validation.py  main.py  models.py  ocr_dependencies.py  ocr_engine.py  ocr_repository.py  ocr_service.py  paddle_ocr_engine.py  schemas.py
tests/: conftest.py  test_database.py  test_document_catalog.py  test_document_download.py  test_document_repository.py  test_document_service.py  test_document_storage.py  test_document_upload.py  test_document_validation.py  test_ocr_api.py  test_ocr_engine.py  test_ocr_models.py  test_ocr_repository.py  test_ocr_service.py  test_package.py  test_paddle_ocr_engine.py  test_status.py
tests/integration/: test_paddle_ocr_smoke.py
