[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "paperpilot"
version = "0.1.0"
description = "A self-hosted AI assistant for organizing receipts, invoices, and utility bills."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "python-multipart>=0.0.20,<1.0",
    "sqlalchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2,<3",
    "pytest>=8,<10",
    "alembic>=1.18,<2.0",
]
ocr = [
    "paddleocr>=3.5,<4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]